--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jwt-decode": "^3.1.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
